...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectToBluetooth">

    <ListView
        android:id="@+id/DeviceListView"
        android:layout_width="368dp"
        android:layout_height="362dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bluetoothStatus"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/FindBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="Find Bluetooth Devices"
...
